# answer-test-refactoryid

./: README.md
Q1/: CMakeLists.txt  README.md  q_1.cpp  q_1.h
Q2/: README.md
Q2/leap_year/: CMakeLists.txt  leap_year.cpp
Q2/palindrome/: CMakeLists.txt  palindrome.cpp
Q3/: README.md  js_manip.py
Q4/: README.md  js_manip2.py
